--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Slider</title>
 </head>
@@ -32,6 +33,18 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
             </div>
         </div>
+
+        <div class="navigation">
+            <i class="fas fa-chevron-left prev-btn"></i>
+            <i class="fas fa-chevron-right next-btn"></i>
+        </div>
+        <div class="navigation-visibility">
+            <div class="slide-icon"></div>
+            <div class="slide-icon"></div>
+            <div class="slide-icon"></div>
+        </div>
     </div>
+
+    
 </body>
 </html>
