--- a/main.html
+++ b/main.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Slider</title>
 </head>
+
 <body>
-    
+
     <div class="slider">
-        <div class="slide">
+        <div class="slide active">
             <img src="images/1.jpg" alt="">
             <div class="content">
                 <h2>Beautiful Sunset</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio
+                    odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere
+                    laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
             </div>
         </div>
         <div class="slide">
             <img src="images/2.jpg" alt="">
             <div class="content">
                 <h2>Space Insomnia</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio
+                    odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere
+                    laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
             </div>
         </div>
         <div class="slide">
             <img src="images/3.jpg" alt="">
             <div class="content">
                 <h2>Desert Dune</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ex inventore qui doloribus optio
+                    odit fugit quos impedit doloremque tenetur quia reiciendis ducimus iure harum atque facere
+                    laboriosam soluta quaerat, unde nisi vitae excepturi est debitis id. Soluta, dicta enim.</p>
             </div>
         </div>
 
@@ -39,12 +49,95 @@
             <i class="fas fa-chevron-right next-btn"></i>
         </div>
         <div class="navigation-visibility">
-            <div class="slide-icon"></div>
+            <div class="slide-icon active"></div>
             <div class="slide-icon"></div>
             <div class="slide-icon"></div>
         </div>
     </div>
 
-    
+    <script>
+        const slider = document.querySelector(".slider");
+        const nextBtn = document.querySelector(".next-btn");
+        const prevBtn = document.querySelector(".prev-btn");
+        const slides = document.querySelectorAll(".slide");
+        const slideicons = document.querySelectorAll(".slide-icon");
+
+        const num = slides.length;
+        var slideNum = 0;
+
+        //Image slider next button
+        nextBtn.addEventListener('click', () => {
+            //removing existing active class
+            slides.forEach((s) => {
+                s.classList.remove("active");
+            });
+            slideicons.forEach((i) => {
+                i.classList.remove("active");
+            });
+
+
+            slideNum++;
+            if (slideNum > num - 1) {
+                slideNum = 0;
+            }
+
+            slides[slideNum].classList.add("active");
+            slideicons[slideNum].classList.add("active");
+        });
+
+        //Image slider previous button
+        prevBtn.addEventListener('click', () => {
+            //removing existing active class
+            slides.forEach((s) => {
+                s.classList.remove("active");
+            });
+            slideicons.forEach((i) => {
+                i.classList.remove("active");
+            });
+
+
+            slideNum--;
+            if (slideNum < 0) {
+                slideNum = 2;
+            }
+
+            slides[slideNum].classList.add("active");
+            slideicons[slideNum].classList.add("active");
+        });
+
+        //Automatic slider
+        var playSlider;
+
+        var repeater = () => {
+            playSlider = setInterval(function () {
+                slides.forEach((s) => {
+                    s.classList.remove("active");
+                });
+                slideicons.forEach((i) => {
+                    i.classList.remove("active");
+                });
+
+
+                slideNum++;
+                if (slideNum > num - 1) {
+                    slideNum = 0;
+                }
+
+                slides[slideNum].classList.add("active");
+                slideicons[slideNum].classList.add("active");
+            }, 1000);
+        }
+        repeater();
+
+        //Stoping the slider with mouse
+        slider.addEventListener("mouseover", () => {
+            clearInterval(playSlider);
+        })
+        //Starting the slider again
+        slider.addEventListener("mouseout", () => {
+            repeater();
+        })
+    </script>
 </body>
+
 </html>
